--- a/Thesis/pixelgeb.tex
+++ b/Thesis/pixelgeb.tex
@@ -193,7 +193,7 @@ in het gekwantiseerde beeld, terwijl we voor het beeldpunt rechts onderaan de mi
 gebruiken. 
 
 Figuur\ref{fig:moments} illustreert een derde optie, waarbij \defin{kleurmomenten} gebruikt
-worden om nieuwe intermediaire beelden te construeren. Het \defin{moment van de $k$-de orde rond $a$} ($a
+worden om nieuwe intermediaire beelden te construeren. Het \defin{moment}{moment van de $k$-de orde rond $a$} ($a
 \in \mathbb{R}$) van een discrete toevalsveranderlijke $T$ met
 probabiliteitsfunctie $prob_T$ wordt als volgt gedefinieerd
 \cite{demeyer:statistiek}: 
