--- a/Thesis/voorwoord.tex
+++ b/Thesis/voorwoord.tex
@@ -4,11 +4,25 @@
 \section*{Dankwoord}
 Graag zou ik iedereen willen bedanken die heeft bijgedragen tot de
 verwezenlijking van dit eindwerk. In het bijzonder dank ik:
-\begin{itemize}
-  \item mijn promotor \promotor\ en mijn begeleiders \begeleider\ voor het scheppen van de
-mogelijkheid dit onderzoek te verrichten
-  \item \ldots
-\end{itemize}
+\begin{description}
+\item[\promotor] voor het scheppen van de mogelijkheid dit 
+onderzoek te verrichten. 
+De manier waarop hij het accuraat overbrengen van kennis weet te combineren
+met een uniek gevoel voor humor, dwingt respect af bij vele studenten. Zijn 
+mateloos enthusiasme en oog voor detail maken van hem bovendien 
+ook een ideale promotor.
+\item[\begeleider] voor de zeer toegewijde en nauwgezette begeleiding. Als ik andere
+studenten hoor vertellen op welke manier zij begeleid werden voor hun scriptie, dan kan 
+ik enkel concluderen dat Valerie en Stefan mij behoorlijk verwend hebben.
+\item[Lina] voor het vele geduld en begrip dat zij heeft moeten opbrengen tijdens de 
+momenten waarop ik, soms misschien iets \emph{te} ijverig, bezig was met dit
+eindwerk. Anderzijds was zij ook altijd bereid om mij terug goede moed te geven
+wanneer ik het even niet meer zag zitten.
+\item[Karlien en Evelyn] voor hun nuttige taalkundige tips.
+\item[mijn ouders] omdat zij mij de kans hebben gegeven om te studeren. Daarnaast
+zou het aantal spelfouten in deze tekst waarschijnlijk ook gevoelig hoger liggen
+zonder de hulp van mijn moeder.
+\end{description}
 \vfill
 
 %\newpage
