--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -41,7 +41,7 @@ relaties zijn naast reflexief en symmetrisch ook transitief. In
 \cite{zadeh:similarity_relations_and_fuzzy_orderings} definieert Zadeh
 de \defin{similariteitsrelatie} als vage uitbreiding van dat scherpe begrip. Als we zouden
 afdwingen dat een similariteitsmaat $M$ een similariteitsrelatie is, dan moet $M$ 
-\defin{$\min$-transitief} zijn: voor drie beelden $A$, $B$ en $C$ moet 
+\defin{min-transitief}{$\min$-transitief} zijn: voor drie beelden $A$, $B$ en $C$ moet 
 $\min\{M(A,B),M(B,C)\} \le M(A,C)$ gelden. Die
 eigenschap komt echter niet overeen met de intu\"itieve betekenis van similariteit
 \cite{de_cock:on_unsuitable_relations_for_approx_equal, de_cock:why_fuzzy_relations_do_not_resolve_pointcare_paradox}. 
@@ -183,7 +183,8 @@ een similariteitsmaat afhankelijk kan zijn van het gekozen voorbeeld. Dat proble
 op door de GGR te berekenen voor meerdere voorbeelden en het gemiddelde van de bekomen waarden
 te beschouwen. We kiezen daarbij de beelden uit de linker kolom van 
 figuur~\ref{fig:testcollectie} als voorbeeld. De waarde die we zo bekomen noemen we de
-\defin{globale genormaliseerde gemiddelde rang} (GGGR). Het is die waarde die we zullen gebruiken
+\defin{genormaliseerde gemiddelde rang!globale}{globale genormaliseerde gemiddelde rang} 
+(GGGR). Het is die waarde die we zullen gebruiken
 om de performantie van een similariteitsmaat te evalueren. We zullen dus met andere woorden op
 zoek gaan naar similariteitsmaten waarvan de GGGR zo klein mogelijk is.
 
