--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -48,8 +48,8 @@ systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voor
 Het uiteindelijke doel van die afstudeerwerk, is de bouw van een prototype dat
 het similariteitsgebaseerd rangschikken van de zoekresultaten implementeert.
 Voor het modelleren van de graduele gelijkenis tussen beelden, maken we daarbij gebruik van 
-vaagsimilariteitsmaten. Om meerdere voorbeelden te ondersteunen, zullen we daarnaast
-ook nog beroep doen op aggregatieoperatoren.
+vaagsimilariteitsmaten. Om meerdere voorbeelden te kunnen ondersteunen, doen we 
+daarnaast ook nog beroep op aggregatieoperatoren.
 %Daarnaast zullen we ook nog beroep doen op aggregatieoperatoren,
 %zowel voor het combineren van verschillende similariteitsmaten als voor het ondersteunen van
 %meerdere voorbeelden. 
