--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -189,6 +189,7 @@ om de performantie van een similariteitsmaat te evalueren. We zullen dus met and
 zoek gaan naar similariteitsmaten waarvan de GGGR zo klein mogelijk is.
 
 \subsection{Rekentijd}
+\label{sectie:rekentijd}
 
 Voor elke similariteitsmaat die we construeren meten we ook hoe lang het duurt om
 de rangschikkingen, die nodig zijn om de GGGR te bepalen, te berekenen. Aan die 
