--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -335,3 +335,10 @@
 	year		= 2002,
 	booktitle	= {Proceedings IEEE International Conference on Image Processing (ICIP)},
 }
+
+@PhdThesis{viet_tran:ir_with_statistical_color_descriptors,
+  	author 		= {Viet Tran, L.},
+  	title 		= {Efficient Image Retrieval with Statistical Color Descriptors},
+  	school 		= {Link\"oping University},
+  	year 		= 2003,
+}
