--- a/Thesis/voorwoord.tex
+++ b/Thesis/voorwoord.tex
@@ -3,7 +3,7 @@
 
 \section*{Dankwoord}
 Graag zou ik iedereen willen bedanken die heeft bijgedragen tot de
-verwezenlijking van dit eindwerk. In het bijzonder dank ik:
+verwezenlijking van dit afstudeerwerk. In het bijzonder dank ik:
 \begin{description}
 \item[\promotor] voor het scheppen van de mogelijkheid dit 
 onderzoek te verrichten. 
